--- a/Ex20240514/src/main/webapp/html/Login.html
+++ b/Ex20240514/src/main/webapp/html/Login.html
@@ -48,8 +48,10 @@
                                 </span>
                             </div>
                             <div class="login_search">
-                                <input type="checkbox" name="chk" id="ch01"/>
-                                <label for="ch01">아이디저장</label>
+                                <span class="checkbox">
+                                    <input type="checkbox" name="chk" id="ch01"/>
+                                    <label for="ch01">아이디저장</label>
+                                </span>
                                 <span class="btn b_search">
                                     <a href="">아이디/비밀번호찾기</a>
                                 </span>
@@ -63,6 +65,34 @@
                 <!-- 단체회원 로그인 -->
                 <div class="group_login">
                     <h2 class="sub_title tit04">단체회원</h2>
+                    <div class="login">
+                        <form action="" method="post">
+                            <div class="input_area"> <!-- 아이디, 비밀번호 입력하는 area -->
+                                <p>
+                                    <label for="s_id">아이디</label>
+                                    <input type="text" id="s_id" name="m_id"/>
+                                </p>
+                                <p>
+                                    <label for="s_pw">비밀번호</label>
+                                    <input type="password" id="s_pw" name="m_pw">
+                                </p>
+                            </div>
+                            <div class="btn_area">
+                                <span class="btn b_login">
+                                    <a href="">로그인</a>
+                                </span>
+                            </div>
+                            <div class="login_search">
+                                <span class="checkbox">
+                                    <input type="checkbox" name="chk" id="ch02"/>
+                                    <label for="ch01">아이디저장</label>
+                                </span>
+                                <span class="btn b_search">
+                                    <a href="">아이디/비밀번호찾기</a>
+                                </span>
+                            </div>
+                        </form>
+                    </div>
                 </div>
                 <!-- 단체회원 로그인 끝 -->
             </div>
@@ -85,7 +115,7 @@
                     고객상담 : 국번없이 114 혹은 01-2333-3453
                 </address>
                 <p class="copyright">
-                    Copyright &copy; 2024 SK Telecom. All rights recserved
+                    Copyright &copy; 2024 SK Telecom. All rights reserved
                 </p>
             </div>
         </footer>
