--- a/Ex20240514/src/main/webapp/html/Main.html
+++ b/Ex20240514/src/main/webapp/html/Main.html
@@ -162,7 +162,7 @@
                     고객상담 : 국번없이 114 혹은 01-2333-3453
                 </address>
                 <p class="copyright">
-                    Copyright &copy; 2024 SK Telecom. All rights recserved
+                    Copyright &copy; 2024 SK Telecom. All rights reserved
                 </p>
             </div>
         </footer>
