--- a/Ex20240514/src/main/webapp/Ex2_Function.html
+++ b/Ex20240514/src/main/webapp/Ex2_Function.html
@@ -8,23 +8,63 @@
     <button type="button" onclick="test1()">버튼1</button>
     &nbsp;
     <button type="button" onclick="test2()">버튼2</button>
+    &nbsp;
+    <button type="button" onclick="test3()">버튼3</button>
+    &nbsp;
+    <button type="button" onclick="test4()">버튼4</button>
+
     <br/><br/>
     <input type="text" id="txt" disabled/>
     <br/><br/>
-    <textarea cols="30" rows="5" id="ta" disabled></textarea>
+    <textarea cols="30" rows="5" id="ta" disabled>안녕하세요!</textarea>
+    <br/><br/>
+
+    <input type="checkbox" id="ch1" name="chk" value="항목1" />
+    <label for="ch1">항목1</label>
+    &nbsp;
+    <input type="checkbox" id="ch2" name="chk" value="항목2" />
+    <label for="ch2">항목2</label>
+    &nbsp;
+    <input type="checkbox" id="ch3" name="chk" value="항목3" />
+    <label for="ch3">항목3</label>
+    <br/>
+    
+
     <script>
+        let ta = document.getElementById("ta");
+
         function test1(){
             // 현재문서 안에서 id가 txt인 요소를 검색하자
             let txt = document.getElementById("txt");
 
             // 검색된 txt안에 값(value)으로 "버튼1"이라는 문자열을 지정한다.
-            txt.value += "버튼1";
+            txt.value = "버튼1";
         }
         function test2(){
-            let ta = document.getElementById("ta");
 
-            ta.value += "버튼2";
+            ta.value = "버튼2";
         }
+        function test3(){
+            ta.innerText = "힘내세요!";
+            //<teaxtarea...>힘내세요!</textarea>
+            // ta.innerHTML = "<strong>힘내세요!</strong>";
+        }
+
+        function test4(){
+            // 현재 문서에서 이름이 "chk"인 모든 요소들을 검색하여 배열로 얻는다.
+            let cbs = document.getElementsByName("chk");
+            let size = cbs.length;
+            console.log("size: " + size);
+            for(let i=0; i<size;i++){
+                // console.log(cbs[i].value+": \n"+cbs[i].checked);
+                if(cbs[i].checked){
+                    console.log(cbs[i].value);
+                }
+            } // for문 끝
+        }
+        // 
+
     </script>
+
 </body>
 </html>
