--- a/Ex20240514/src/main/webapp/Ex2_Function.html
+++ b/Ex20240514/src/main/webapp/Ex2_Function.html
@@ -54,7 +54,7 @@
             // 현재 문서에서 이름이 "chk"인 모든 요소들을 검색하여 배열로 얻는다.
             let cbs = document.getElementsByName("chk");
             let size = cbs.length;
-            console.log("size: " + size);
+            // console.log("size: " + size);
             for(let i=0; i<size;i++){
                 // console.log(cbs[i].value+": \n"+cbs[i].checked);
                 if(cbs[i].checked){
